moved API down to footer. Added Discord Link.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<span>Pools</span>
 									</a>
 								</span>
-								<span class="navbar-item">
+								<span class="navbar-item" style="display:none;">
 									<a data-page="api.html" href="#api" class="button is-light hot_link">
 									<span class="icon">
 										<i class="fa fa-code"></i>
@@ -154,11 +154,23 @@
 
 						</div>
 						<div class="column has-text-right">
+							<a href="http://blocks.athx.host/#api" class="button is-light">
+								<span class="icon">
+									<i class="fab fa-code"></i>
+								</span>
+								<span>API</span>
+							</a>
 							<a href="https://github.com/fexra/athena-explorer" class="button is-dark">
-							<span class="icon">
-								<i class="fab fa-github"></i>
-							</span>
-							<span>Github</span>
+								<span class="icon">
+									<i class="fab fa-discord"></i>
+								</span>
+								<span>Discord</span>
+							</a>
+							<a href="http://chat.athx.org" class="button" style="background: #6c81ca;">
+								<span class="icon">
+									<i class="fab fa-github"></i>
+								</span>
+								<span>Github</span>
 							</a>
 						</div>
 					</div>
