--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
 						<div class="column has-text-right">
 							<a href="http://blocks.athx.host/#api" class="button is-light">
 								<span class="icon">
-									<i class="fab fa-code"></i>
+									<i class="fab fa-plug"></i>
 								</span>
 								<span>API</span>
 							</a>
-							<a href="https://github.com/fexra/athena-explorer" class="button is-dark">
+							<a href="https://github.com/fexra/athena-explorer" class="button is-dark" style="background: #6c81ca;">
 								<span class="icon">
 									<i class="fab fa-discord"></i>
 								</span>
 								<span>Discord</span>
 							</a>
-							<a href="http://chat.athx.org" class="button" style="background: #6c81ca;">
+							<a href="http://chat.athx.org" class="button is-dark">
 								<span class="icon">
 									<i class="fab fa-github"></i>
 								</span>
