--- a/pages/home.html
+++ b/pages/home.html
@@ -9,31 +9,31 @@
                             <span class="panel-icon">
                                 <i class="fas fa-bars" aria-hidden="true"></i>
                             </span>
-                            <b>Height:</b>  <span id="networkHeight"></span>
+                            <b>Height: </b> <span id="networkHeight"></span>
                         </p>
                         <p class="panel-block">
                             <span class="panel-icon">
                                 <i class="fas fa-exchange" aria-hidden="true"></i>
                             </span>
-                            <b>Transactions:</b>  <span id="networkTransactions"></span>
+                            <b>Transactions: </b> <span id="networkTransactions"></span>
                         </p>
                         <p class="panel-block">
                             <span class="panel-icon">
                                 <i class="fas fa-coins" aria-hidden="true"></i>
                             </span>
-                            <b>Reward:</b>  <span id="currentReward"></span>
+                            <b>Reward: </b> <span id="currentReward"></span>
                         </p>
                         <p class="panel-block">
                             <span class="panel-icon">
                                 <i class="fas fa-boxes" aria-hidden="true"></i>
                             </span>
-                            <b>Supply:</b>  <span id="totalCoins"></span>
+                            <b>Supply: </b> <span id="totalCoins"></span>
                         </p>
                         <p class="panel-block">
                             <span class="panel-icon">
                                 <i class="fas fa-signal" aria-hidden="true"></i>
                             </span>
-                            <b>Emission:</b>  <span id="emissionPercent"></span>
+                            <b>Emission: </b> <span id="emissionPercent"></span>
                         </p>
                     </div>
                     <div class="column">
@@ -42,25 +42,25 @@
                                 <span class="panel-icon">
                                     <i class="fas fa-unlock-alt" aria-hidden="true"></i>
                                 </span>
-                                <b>Difficulty:</b>  <span id="networkDifficulty"></span>
+                                <b>Difficulty: </b> <span id="networkDifficulty"></span>
                             </p>
                             <p class="panel-block">
                                 <span class="panel-icon">
                                     <i class="fas fa-lock" aria-hidden="true"></i>
                                 </span>
-                                <b>Avg. Diff.:</b>  <span id="avgDifficulty"></span>
+                                <b>Avg Diff: </b> <span id="avgDifficulty"></span>
                             </p>
                             <p class="panel-block">
                                 <span class="panel-icon">
                                     <i class="fas fa-tachometer-alt" aria-hidden="true"></i>
                                 </span>
-                                <b>Hash Rate:</b>  <span id="networkHashrate"></span>
+                                <b>Hash Rate: </b> <span id="networkHashrate"></span>
                             </p>
                             <p class="panel-block">
                                 <span class="panel-icon">
                                     <i class="fas fa-clock" aria-hidden="true"></i>
                                 </span>
-                                <b>Avg. Hash Rate:</b>  <span id="avgHashrate"></span>
+                                <b>Avg Hash Rate: </b> <span id="avgHashrate"></span>
                             </p>
                         </div>
                     </div>
@@ -477,9 +477,9 @@
         var avgDiff = Math.round(sum / Difficulties.length);
         var avgHashRate = avgDiff / blockTargetInterval;
 
-        //updateText('avgDifficulty', getReadableDifficultyString(avgDiff, 0).toString());
-        //updateText('avgHashrate', getReadableHashRateString(avgDiff / blockTargetInterval));
-        // updateText('blockSolveTime', getReadableTime(lastStats.difficulty / avgHashRate)); Add back after timestamp is added to mempool
+        updateText('avgDifficulty', getReadableDifficultyString(avgDiff, 0).toString());
+        updateText('avgHashrate', getReadableHashRateString(avgDiff / blockTargetInterval));
+        //updateText('blockSolveTime', getReadableTime(lastStats.difficulty / avgHashRate)); Add back after timestamp is added to mempool
     }
 
     //  Turtle MemPool Transactions
