--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 						<div class="column has-text-right">
 							<a href="http://blocks.athx.host/#api" class="button is-light">
 								<span class="icon">
-									<i class="fab fa-plug"></i>
+									<i class="fa fa-plug"></i>
 								</span>
 								<span>API</span>
 							</a>
