--- a/pages/home.html
+++ b/pages/home.html
@@ -13,7 +13,7 @@
                         </p>
                         <p class="panel-block">
                             <span class="panel-icon">
-                                <i class="fas fa-exchange" aria-hidden="true"></i>
+                                <i class="fas fa-exchange-alt" aria-hidden="true"></i>
                             </span>
                             <b>Transactions: </b> <span id="networkTransactions"></span>
                         </p>
