--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
 								</span>
 								<span>API</span>
 							</a>
-							<a href="https://github.com/fexra/athena-explorer" class="button is-dark" style="background: #6c81ca;">
+							<a href="http://chat.athx.org" class="button is-dark" style="background: #6c81ca;">
 								<span class="icon">
 									<i class="fab fa-discord"></i>
 								</span>
 								<span>Discord</span>
 							</a>
-							<a href="http://chat.athx.org" class="button is-dark">
+							<a href="https://github.com/fexra/athena-explorer" class="button is-dark">
 								<span class="icon">
 									<i class="fab fa-github"></i>
 								</span>
