fixed search button

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					
 										<p class="control">
 											<a id="goto-height-go" href="#" class="button is-back">
-													<i class="fa fa-search"><</i>
+												<i class="fa fa-search"></i>
 											</a>
 										</p>
 									</div>
