--- a/pages/home.html
+++ b/pages/home.html
@@ -83,7 +83,7 @@
     <div class="tile is-parent is-12">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title is-4 badge is-badge-info is-large" id="mempool_count" data-badge="0"></p>>Memory Pool</p>
+                <p class="title is-4 badge is-badge-dark is-large" id="mempool_count" data-badge="0"></p>Memory Pool</p>
                 <div class="table">
                     <table class="table is-hoverable is-fullwidth is-5" id="mem_pool_table">
                         <thead>
