--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
             <article class="tile is-child notification">
                 <p class="title is-4">Overview</p>
                 <div class="columns" style="padding-top:20px;">
-                    <div class="column">
+                    <div class="column is-6">
                         <p class="panel-block">
                             <span class="panel-icon">
                                 <i class="fas fa-bars" aria-hidden="true"></i>
@@ -570,13 +570,13 @@
                 data: [].concat(Txses).reverse(),
                 yAxisID: "Transactions",
                 label: "Transactions",
-                backgroundColor: "rgba(248,223,88,0.2)",
-                borderColor: '#f8df58',
+                backgroundColor: "rgba(56,56,56,0.2)",
+                borderColor: '#383838',
                 borderWidth: 2,
-                pointColor: "#f8df58",
-                pointBorderColor: "#f8df58",
-                pointHighlightFill: "#f8df58",
-                pointBackgroundColor: "#f8df58",
+                pointColor: "#383838",
+                pointBorderColor: "#383838",
+                pointHighlightFill: "#383838",
+                pointBackgroundColor: "#383838",
                 pointBorderWidth: 2,
                 pointRadius: 1,
                 pointHoverRadius: 3,
@@ -585,13 +585,13 @@
                 data: [].concat(Sizes).reverse(),
                 yAxisID: "Sizes",
                 label: "Size",
-                backgroundColor: "rgba(242,53,101,0.2)",
-                borderColor: '#f23565',
+                backgroundColor: "rgba(140,140,140,0.2)",
+                borderColor: '#8c8c8c',
                 borderWidth: 2,
-                pointColor: "#f23565",
-                pointBorderColor: "#f23565",
-                pointHighlightFill: "#f23565",
-                pointBackgroundColor: "#f23565",
+                pointColor: "#8c8c8c",
+                pointBorderColor: "#8c8c8c",
+                pointHighlightFill: "#8c8c8c",
+                pointBackgroundColor: "#8c8c8c",
                 pointBorderWidth: 2,
                 pointRadius: 1,
                 pointHoverRadius: 3,
