--- a/pages/home.html
+++ b/pages/home.html
@@ -83,7 +83,7 @@
     <div class="tile is-parent is-12">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title is-4 badge is-badge-dark is-large" id="mempool_count" data-badge="0"></p>Memory Pool</p>
+                <p class="title is-4 badge is-badge-dark is-large" id="mempool_count" data-badge="0">Memory Pool</p>
                 <div class="table">
                     <table class="table is-hoverable is-fullwidth is-5" id="mem_pool_table">
                         <thead>
@@ -585,7 +585,7 @@
                 data: [].concat(Sizes).reverse(),
                 yAxisID: "Sizes",
                 label: "Size",
-                backgroundColor: "rgba(140,140,140,0.2)",
+                backgroundColor: "rgba(140,140,140,0)",
                 borderColor: '#8c8c8c',
                 borderWidth: 2,
                 pointColor: "#8c8c8c",
