--- a/pages/home.html
+++ b/pages/home.html
@@ -4,36 +4,36 @@
             <article class="tile is-child notification">
                 <p class="title is-4">Overview</p>
                 <div class="columns" style="padding-top:20px;">
-                    <div class="column is-6">
+                    <div class="column">
                         <p class="panel-block">
                             <span class="panel-icon">
                                 <i class="fas fa-bars" aria-hidden="true"></i>
                             </span>
-                            <b>Height: </b> <span id="networkHeight"></span>
+                            <b>Height: </b> <span id="networkHeight" class="is-7"></span>
                         </p>
                         <p class="panel-block">
                             <span class="panel-icon">
                                 <i class="fas fa-exchange-alt" aria-hidden="true"></i>
                             </span>
-                            <b>Transactions: </b> <span id="networkTransactions"></span>
+                            <b>Transactions: </b> <span id="networkTransactions" class="is-7"></span>
                         </p>
                         <p class="panel-block">
                             <span class="panel-icon">
                                 <i class="fas fa-coins" aria-hidden="true"></i>
                             </span>
-                            <b>Reward: </b> <span id="currentReward"></span>
+                            <b>Reward: </b> <span id="currentReward" class="is-7"></span>
                         </p>
                         <p class="panel-block">
                             <span class="panel-icon">
                                 <i class="fas fa-boxes" aria-hidden="true"></i>
                             </span>
-                            <b>Supply: </b> <span id="totalCoins"></span>
+                            <b>Supply: </b> <span id="totalCoins" class="is-7"></span>
                         </p>
                         <p class="panel-block">
                             <span class="panel-icon">
                                 <i class="fas fa-signal" aria-hidden="true"></i>
                             </span>
-                            <b>Emission: </b> <span id="emissionPercent"></span>
+                            <b>Emission: </b> <span id="emissionPercent" class="is-7"></span>
                         </p>
                     </div>
                     <div class="column">
@@ -42,25 +42,25 @@
                                 <span class="panel-icon">
                                     <i class="fas fa-unlock-alt" aria-hidden="true"></i>
                                 </span>
-                                <b>Difficulty: </b> <span id="networkDifficulty"></span>
+                                <b>Difficulty: </b> <span id="networkDifficulty" class="is-7"></span>
                             </p>
                             <p class="panel-block">
                                 <span class="panel-icon">
                                     <i class="fas fa-lock" aria-hidden="true"></i>
                                 </span>
-                                <b>Avg Diff: </b> <span id="avgDifficulty"></span>
+                                <b>Avg Diff: </b> <span id="avgDifficulty" class="is-7"></span>
                             </p>
                             <p class="panel-block">
                                 <span class="panel-icon">
                                     <i class="fas fa-tachometer-alt" aria-hidden="true"></i>
                                 </span>
-                                <b>Hash Rate: </b> <span id="networkHashrate"></span>
+                                <b>Hash Rate: </b> <span id="networkHashrate" class="is-7"></span>
                             </p>
                             <p class="panel-block">
                                 <span class="panel-icon">
                                     <i class="fas fa-clock" aria-hidden="true"></i>
                                 </span>
-                                <b>Avg Hash Rate: </b> <span id="avgHashrate"></span>
+                                <b>Avg Hash Rate: </b> <span id="avgHashrate" class="is-7"></span>
                             </p>
                         </div>
                     </div>
