--- a/pages/home.html
+++ b/pages/home.html
@@ -1,83 +1,80 @@
 <div class="tile is-ancestor">
-     <div class="tile is-parent is-6" id="network-stats">
+     <div class="tile is-parent is-3" id="network-stats">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title is-4">Overview</p>
-                <div class="columns" style="padding-top:20px;">
-                    <div class="column">
-                        <ul>
-                            <li>
-                                <span class="panel-icon">
-                                    <i class="fas fa-bars" aria-hidden="true"></i>
-                                </span>
-                                <b>Height: </b> <span id="networkHeight" class="is-7"></span>
-                            </li>
-                            <li>
-                                <span class="panel-icon">
-                                    <i class="fas fa-exchange-alt" aria-hidden="true"></i>
-                                </span>
-                                <b>Transactions: </b> <span id="networkTransactions" class="is-7"></span>
-                            </li>
-                            <li>
-                                <span class="panel-icon">
-                                    <i class="fas fa-coins" aria-hidden="true"></i>
-                                </span>
-                                <b>Reward: </b> <span id="currentReward" class="is-7"></span>
-                            </li>
-                            <li>
-                                <span class="panel-icon">
-                                    <i class="fas fa-boxes" aria-hidden="true"></i>
-                                </span>
-                                <b>Supply: </b> <span id="totalCoins" class="is-7"></span>
-                            </li>
-                            <li>
-                                <span class="panel-icon">
-                                    <i class="fas fa-signal" aria-hidden="true"></i>
-                                </span>
-                                <b>Emission: </b> <span id="emissionPercent" class="is-7"></span>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <div class="column">
-                            <ul>
-                                <li>
-                                    <span class="panel-icon">
-                                        <i class="fas fa-unlock-alt" aria-hidden="true"></i>
-                                    </span>
-                                    <b>Difficulty: </b> <span id="networkDifficulty" class="is-7"></span>
-                                </li>
-                                <li>
-                                    <span class="panel-icon">
-                                        <i class="fas fa-lock" aria-hidden="true"></i>
-                                    </span>
-                                    <b>Avg Diff: </b> <span id="avgDifficulty" class="is-7"></span>
-                                </li>
-                                <li>
-                                    <span class="panel-icon">
-                                        <i class="fas fa-tachometer-alt" aria-hidden="true"></i>
-                                    </span>
-                                    <b>Hash Rate: </b> <span id="networkHashrate" class="is-7"></span>
-                                </li>
-                                <li>
-                                    <span class="panel-icon">
-                                        <i class="fas fa-clock" aria-hidden="true"></i>
-                                    </span>
-                                    <b>Avg Hash Rate: </b> <span id="avgHashrate" class="is-7"fe></span>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <ul>
+                    <li>
+                        <span class="panel-icon">
+                            <i class="fas fa-bars" aria-hidden="true"></i>
+                        </span>
+                        <b>Height: </b> <span id="networkHeight" class="is-7"></span>
+                    </li>
+                    <li>
+                        <span class="panel-icon">
+                            <i class="fas fa-exchange-alt" aria-hidden="true"></i>
+                        </span>
+                        <b>Transactions: </b> <span id="networkTransactions" class="is-7"></span>
+                    </li>
+                    <li>
+                        <span class="panel-icon">
+                            <i class="fas fa-coins" aria-hidden="true"></i>
+                        </span>
+                        <b>Reward: </b> <span id="currentReward" class="is-7"></span>
+                    </li>
+                    <li>
+                        <span class="panel-icon">
+                            <i class="fas fa-boxes" aria-hidden="true"></i>
+                        </span>
+                        <b>Supply: </b> <span id="totalCoins" class="is-7"></span>
+                    </li>
+                    <li>
+                        <span class="panel-icon">
+                            <i class="fas fa-signal" aria-hidden="true"></i>
+                        </span>
+                        <b>Emission: </b> <span id="emissionPercent" class="is-7"></span>
+                    </li>
+                </ul>
             </article>
         </div>
     </div>
+    <div class="tile is-parent is-3" id="network-stats">
+        <div class="tile">
+            <article class="tile is-child notification">
+                <ul>
+                        <li>
+                            <span class="panel-icon">
+                                <i class="fas fa-unlock-alt" aria-hidden="true"></i>
+                            </span>
+                            <b>Difficulty: </b> <span id="networkDifficulty" class="is-7"></span>
+                        </li>
+                        <li>
+                            <span class="panel-icon">
+                                <i class="fas fa-lock" aria-hidden="true"></i>
+                            </span>
+                            <b>Avg Diff: </b> <span id="avgDifficulty" class="is-7"></span>
+                        </li>
+                        <li>
+                            <span class="panel-icon">
+                                <i class="fas fa-tachometer-alt" aria-hidden="true"></i>
+                            </span>
+                            <b>Hash Rate: </b> <span id="networkHashrate" class="is-7"></span>
+                        </li>
+                        <li>
+                            <span class="panel-icon">
+                                <i class="fas fa-clock" aria-hidden="true"></i>
+                            </span>
+                            <b>Avg Hash Rate: </b> <span id="avgHashrate" class="is-7"fe></span>
+                        </li>
+                    </ul>
+            </article>
+        </div>
+    </div>
+
     <div class="tile is-parent is-6">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title is-4">Chart</p>
                 <div class="chart-wrapper">
-                    <canvas id="difficultyChart" height="210"></canvas>
+                    <canvas id="difficultyChart" height="200"></canvas>
                 </div>
             </article>
         </div>
