--- a/pages/home.html
+++ b/pages/home.html
@@ -1,33 +1,47 @@
 <div class="tile is-ancestor">
     
     <div class="tile is-parent is-vertical is-3" id="network-stats">
+
         <article class="tile is-child notification">
-            <i class="fas fa-bars" aria-hidden="true"></i> <b>Height: </b> <span id="networkHeight" class="is-7"></span>
-        </article>    
+            <i class="fas fa-bars" aria-hidden="true"></i> <b>Height: </b> <span id="networkHeight" class="is-size-7"></span>
+        </article>   
+
         <article class="tile is-child notification">
-            <i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Transactions: </b> <span id="networkTransactions" class="is-7"></span>
-        </article>    
-        <article class="tile is-child notification">
-            <i class="fas fa-coins" aria-hidden="true"></i> <b>Reward: </b> <span id="currentReward" class="is-7"></span>
+            <i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Transactions: </b> <span id="networkTransactions" class="is-size-7"></span>
         </article>  
+
         <article class="tile is-child notification">
-            <i class="fas fa-boxes" aria-hidden="true"></i> <b>Supply: </b> <span id="totalCoins" class="is-7"></span> (<span id="emissionPercent" class="is-7"></span>%)
+            <div>
+                <i class="fas fa-lock" aria-hidden="true"></i> <b>Supply: </b> <span id="totalCoins" class="is-size-7"></span>
+            </div>
+            <div>
+                <i class="fas fa-lock" aria-hidden="true"></i> Emision: </b> <span id="emissionPercent" class="is-size-7"></span>
+            </div>
         </article>  
     </div>
 
     <div class="tile is-parent is-vertical is-3" id="network-stats">
         <article class="tile is-child notification">
-                <i class="fas fa-unlock-alt" aria-hidden="true"></i> <b>Difficulty: </b> <span id="networkDifficulty" class="is-7"></span>
+            <div>
+                <i class="fas fa-lock" aria-hidden="true"></i> <b>Difficulty: </b> <span id="networkDifficulty" class="is-size-7"></span>
+            </div>
+            <div>
+                <i class="fas fa-lock" aria-hidden="true"></i> Avg. Difficulty: </b> <span id="avgDifficulty" class="is-size-7"></span>
+            </div>
         </article>    
+       
         <article class="tile is-child notification">
-            <i class="fas fa-lock" aria-hidden="true"></i> <b>&Delta; Difficulty: </b> <span id="avgDifficulty" class="is-7"></span>
-        </article>    
-        <article class="tile is-child notification">
-            <i class="fas fa-tachometer-alt" aria-hidden="true"></i> <b>Hash Rate: </b> <span id="networkHashrate" class="is-7"></span>
+            <div>
+                <i class="fas fa-tachometer-alt" aria-hidden="true"></i> <b>Hash: </b> <span id="networkHashrate" class="is-size-7"></span>
+            </div>
+            <div>
+                <i class="fas fa-clock" aria-hidden="true"></i> Avg. Hash: </b> <span id="avgHashrate" class="is-size-7"></span>
+            </div>
         </article>  
+
         <article class="tile is-child notification">
-            <i class="fas fa-clock" aria-hidden="true"></i> <b>Supply: </b> <span id="avgHashrate" class="is-7"></span>
-        </article>
+                <i class="fas fa-coins" aria-hidden="true"></i> <b>Reward: </b> <span id="currentReward" class="is-size-7"></span>
+        </article>  
     </div>
  
     <div class="tile is-parent is-6">
@@ -154,7 +168,9 @@
             updateText('networkDifficulty', getReadableDifficultyString(lastStats.difficulty, 0).toString());
             $("time.timeago").timeago();
             getPoolTransactions();
+
             var currHeight = $('#blocks_rows').children().first().data('height');
+
             if((currHeight + 31) > lastStats.last_known_block_index) {
                 $.when(
                     renderInitialBlocks()
