font size on tiles

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,45 +2,45 @@
     
     <div class="tile is-parent is-vertical is-3" id="network-stats">
 
-        <article class="tile is-child notification">
-            <i class="fas fa-bars" aria-hidden="true"></i> <b>Height: </b> <span id="networkHeight" class="is-size-7"></span>
+        <article class="tile is-child notification is-size-7">
+            <i class="fas fa-bars" aria-hidden="true"></i> <b>Height: </b> <span id="networkHeight"></span>
         </article>   
 
-        <article class="tile is-child notification">
-            <i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Transactions: </b> <span id="networkTransactions" class="is-size-7"></span>
+        <article class="tile is-child notification is-size-6">
+            <i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Transactions: </b> <span id="networkTransactions"></span>
         </article>  
 
-        <article class="tile is-child notification">
+        <article class="tile is-child notification is-size-7">
             <div>
-                <i class="fas fa-lock" aria-hidden="true"></i> <b>Supply: </b> <span id="totalCoins" class="is-size-7"></span>
+                <i class="fas fa-lock" aria-hidden="true"></i> <b>Supply: </b> <span id="totalCoins"></span>
             </div>
             <div>
-                <i class="fas fa-lock" aria-hidden="true"></i> Emision: </b> <span id="emissionPercent" class="is-size-7"></span>
+                <i class="fas fa-lock" aria-hidden="true"></i> <b>Emision: </b> <span id="emissionPercent"></span>
             </div>
         </article>  
     </div>
 
     <div class="tile is-parent is-vertical is-3" id="network-stats">
-        <article class="tile is-child notification">
+        <article class="tile is-child notification is-size-7">
             <div>
-                <i class="fas fa-lock" aria-hidden="true"></i> <b>Difficulty: </b> <span id="networkDifficulty" class="is-size-7"></span>
+                <i class="fas fa-lock" aria-hidden="true"></i> <b>Difficulty: </b> <span id="networkDifficulty"></span>
             </div>
             <div>
-                <i class="fas fa-lock" aria-hidden="true"></i> Avg. Difficulty: </b> <span id="avgDifficulty" class="is-size-7"></span>
+                <i class="fas fa-lock" aria-hidden="true"></i> <b>Avg. Difficulty: </b> <span id="avgDifficulty"></span>
             </div>
         </article>    
        
-        <article class="tile is-child notification">
+        <article class="tile is-child notification is-size-7">
             <div>
-                <i class="fas fa-tachometer-alt" aria-hidden="true"></i> <b>Hash: </b> <span id="networkHashrate" class="is-size-7"></span>
+                <i class="fas fa-tachometer-alt" aria-hidden="true"></i> <b>Hash: </b> <span id="networkHashrate"></span>
             </div>
             <div>
-                <i class="fas fa-clock" aria-hidden="true"></i> Avg. Hash: </b> <span id="avgHashrate" class="is-size-7"></span>
+                <i class="fas fa-clock" aria-hidden="true"></i> <b>Avg. Hash: </b> <span id="avgHashrate"></span>
             </div>
         </article>  
 
-        <article class="tile is-child notification">
-                <i class="fas fa-coins" aria-hidden="true"></i> <b>Reward: </b> <span id="currentReward" class="is-size-7"></span>
+        <article class="tile is-child notification is-size-6">
+                <i class="fas fa-coins" aria-hidden="true"></i> <b>Reward: </b> <span id="currentReward"></span>
         </article>  
     </div>
  
