--- a/pages/home.html
+++ b/pages/home.html
@@ -2,15 +2,15 @@
     
     <div class="tile is-parent is-vertical is-3" id="network-stats">
 
-        <article class="tile is-child notification is-size-7">
+        <article class="tile is-child notification is-size-6" style="padding-top:15px;">
             <i class="fas fa-bars" aria-hidden="true"></i> <b>Height: </b> <span id="networkHeight"></span>
         </article>   
 
-        <article class="tile is-child notification is-size-6">
+        <article class="tile is-child notification is-size-6" style="padding-top:15px;">
             <i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Transactions: </b> <span id="networkTransactions"></span>
         </article>  
 
-        <article class="tile is-child notification is-size-7">
+        <article class="tile is-child notification is-size-6">
             <div>
                 <i class="fas fa-lock" aria-hidden="true"></i> <b>Supply: </b> <span id="totalCoins"></span>
             </div>
@@ -21,7 +21,7 @@
     </div>
 
     <div class="tile is-parent is-vertical is-3" id="network-stats">
-        <article class="tile is-child notification is-size-7">
+        <article class="tile is-child notification is-size-6">
             <div>
                 <i class="fas fa-lock" aria-hidden="true"></i> <b>Difficulty: </b> <span id="networkDifficulty"></span>
             </div>
@@ -30,7 +30,7 @@
             </div>
         </article>    
        
-        <article class="tile is-child notification is-size-7">
+        <article class="tile is-child notification is-size-6">
             <div>
                 <i class="fas fa-tachometer-alt" aria-hidden="true"></i> <b>Hash: </b> <span id="networkHashrate"></span>
             </div>
@@ -39,7 +39,7 @@
             </div>
         </article>  
 
-        <article class="tile is-child notification is-size-6">
+        <article class="tile is-child notification is-size-6" style="padding-top:15px;">
                 <i class="fas fa-coins" aria-hidden="true"></i> <b>Reward: </b> <span id="currentReward"></span>
         </article>  
     </div>
