--- a/pages/home.html
+++ b/pages/home.html
@@ -2,11 +2,11 @@
     
     <div class="tile is-parent is-vertical is-3" id="network-stats">
 
-        <article class="tile is-child notification is-size-6" style="padding-top:15px;">
+        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
             <i class="fas fa-bars" aria-hidden="true"></i> <b>Height: </b> <span id="networkHeight"></span>
         </article>   
 
-        <article class="tile is-child notification is-size-6" style="padding-top:15px;">
+        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
             <i class="fas fa-exchange-alt" aria-hidden="true"></i> <b>Transactions: </b> <span id="networkTransactions"></span>
         </article>  
 
@@ -39,7 +39,7 @@
             </div>
         </article>  
 
-        <article class="tile is-child notification is-size-6" style="padding-top:15px;">
+        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
                 <i class="fas fa-coins" aria-hidden="true"></i> <b>Reward: </b> <span id="currentReward"></span>
         </article>  
     </div>
@@ -215,9 +215,9 @@
                     cache: 'false',
                     success: function(data) {
                     block = data.result.block;
-                        updateText('totalCoins', getReadableCoins(block.alreadyGeneratedCoins,2));
+                        updateText('totalCoins', getReadableCoins(block.alreadyGeneratedCoins, 2, false));
                         updateText('emissionPercent', (block.alreadyGeneratedCoins / 100000000000000 * 100).toFixed(4));
-                        updateText('currentReward', getReadableCoins(block.baseReward,4));
+                        updateText('currentReward', getReadableCoins(block.baseReward, 4, false));
                     }
                 });
             }
