pools page fixup

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 										</p>
 					
 										<p class="control">
-											<a id="goto-height-go" href="#" class="button is-back">
+											<a id="goto-height-go" href="#" class="button is-dark">
 												<i class="fa fa-search"></i>
 											</a>
 										</p>
