graph size on pools page

--- a/pages/home.html
+++ b/pages/home.html
@@ -214,6 +214,7 @@
                         updateText('totalCoins', getReadableCoins(block.alreadyGeneratedCoins, 2, ' '));
                         updateText('emissionPercent', (block.alreadyGeneratedCoins / 100000000000000 * 100).toFixed(4));
                         updateText('currentReward', getReadableCoins(block.baseReward, 4, ' '));
+                        console.log(block.baseReward)
                     }
                 });
             }
