--- a/pages/home.html
+++ b/pages/home.html
@@ -16,14 +16,13 @@
 
         <article class="tile is-child notification is-size-6">
             <i class="fas fa-coins" aria-hidden="true"></i> <b>Reward: </b> <span id="currentReward"></span>
-            <br>
-            <i class="fas fa-signal" aria-hidden="true"></i> <b>Emision: </b> <span id="emissionPercent"></span>
         </article>  
-
-        
     </div>
 
     <div class="tile is-parent is-vertical is-3">
+        <article class="tile is-child notification is-size-6">
+            <i class="fas fa-signal" aria-hidden="true" ></i> <b>Emision: </b> <span id="emissionPercent"></span>            
+        </article>  
         <article class="tile is-child notification is-size-6">
             <i class="fas fa-lock" aria-hidden="true"></i> <b>Difficulty: </b> <span id="networkDifficulty"></span>
         </article>  
