block / tx template styling

--- a/pages/pools.html
+++ b/pages/pools.html
@@ -1,29 +1,29 @@
 <div class="tile is-ancestor">
 
     <div class="tile is-parent is-vertical is-3">
-        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
+        <article class="tile is-child notification is-size-6">
             <i class="fas fa-bolt" aria-hidden="true"></i> <b>Pools: </b> <span id="totalPoolsHashrate"></span>
         </article>   
 
-        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
+        <article class="tile is-child notification is-size-6">
             <i class="fas fa-leaf" aria-hidden="true"></i> <b>Network: </b> <span id="networkHashrate"></span>
         </article>
 
-        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
+        <article class="tile is-child notification is-size-6">
             <i class="fas fa-users" aria-hidden="true"></i> <b>Total Miners: </b> <span id="total_miners"></span>
         </article>   
     </div>
 
     <div class="tile is-parent is-vertical is-3">
-        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
+        <article class="tile is-child notification is-size-6">
             <i class="fas fa-lock" aria-hidden="true"></i> <b>Difficulty: </b> <span id="networkDifficulty"></span>
         </article>   
 
-        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
+        <article class="tile is-child notification is-size-6">
             <i class="fas fa-lock" aria-hidden="true"></i> <b>Avg. Difficulty: </b> <span id="avgDifficulty"></span>
         </article>
 
-        <article class="tile is-child notification is-size-6" style="padding-top:30px;">
+        <article class="tile is-child notification is-size-6">
             <i class="fas fa-tachometer-alt" aria-hidden="true"></i> <b>Avg. Hash Rate: </b> <span id="avgHashrate"></span>
         </article>   
     </div>
