--- a/pages/blockchain_block.html
+++ b/pages/blockchain_block.html
@@ -1,50 +1,97 @@
 <div class="tile is-ancestor">
-	<div class="tile is-parent is-12">
-		<div class="tile">
-			<article class="tile is-child notification">
-				<p class="title size-is-4">Block</p>
-				<div class="columns">
-					<div class="column">
-						<div>Block Hash: <span id="block_hash"><span id="block.hash"></span></span></div>
-						<div>Height: <span id="block_height"><span id="block.height"></span></span></div>
-						<div>Timestamp: <span id="block.timestamp"></span></div>
-						<div>Version: <span id="block.version"></span></div>
-						<div>Difficulty: <span id="block.difficulty"></span></div>
-						<div>Orphan: <span id="block.orphan"></span></div>
-						<div>Tx: <span id="block.transactions"></span></a></div>
-						<div>Total Supply: <span id="block.totalCoins"></span></div>
-						<div>Total Tx: <span id="block.totalTransactions"></span></div>
-					</div>
 
-					<div class="column">
-						<div>Tx Size: <span id="block.transactionsSize"></span></div>
-						<div>Block Size: <span id="block.blockSize"></span></div>
-						<div>Tx Median: <span id="block.currentTxsMedian"></span></div>
-						<div>Effective Tx Median: <span id="block.effectiveTxsMedian"></span></div>
-						<div>Reward Penalty: <span id="block.rewardPenalty"></span></div>
-						<div>Base Reward: <span id="block.baseReward"></span></div>
-						<div>Tx Fee: <span id="block.transactionsFee"></span></div>
-						<div>Reward: <span id="block.reward"></span></div>
-					</div>
-				</div>
-			</article>
-		</div>
+	<div class="tile is-parent is-12">
+		<article class="tile is-child notification">
+			<p class="title size-is-4">Block <span id="block_hash size-is-7"><span id="block.hash"></span></span></p>
+		</article>
 	</div>
+
+    <div class="tile is-parent is-vertical is-3">
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Height: </b> <span id="block_height"><span id="block.height"></span></span>
+		</article>   
+
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-clock" aria-hidden="true"></i> <b>Timestamp: </b> <span id="block.timestamp"></span></span>
+		</article>
+
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-users" aria-hidden="true"></i> <b>Version: </b> <span id="block.version"></span>
+		</article>
+
+		<article class="tile is-child notification is-size-6">
+				<i class="fas fa-lock" aria-hidden="true"></i> <b>Difficulty: </b> <span id="block.difficulty"></span>
+		</article>	
+	</div>
+
+    <div class="tile is-parent is-vertical is-3">
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Orphan: </b> <span id="block.orphan"></span></span>
+		</article>   
+
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-clock" aria-hidden="true"></i> <b>Transaction: </b> <span id="block.transactions"></span>
+		</article>
+
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-users" aria-hidden="true"></i> <b>Total Supply: </b> <span id="block.totalCoins"></span>
+		</article>
+
+		<article class="tile is-child notification is-size-6">
+				<i class="fas fa-lock" aria-hidden="true"></i> <b>Total Transactions: </b> <span id="block.totalTransactions"></span>
+		</article>	
+	</div>
+
+    <div class="tile is-parent is-vertical is-3">
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Tx. Size: <span id="block.transactionsSize"></span>
+		</article>   
+
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-cube" aria-hidden="true"></i> <b>Block Size: </b> <span id="block.blockSize"></span>
+		</article>
+
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-users" aria-hidden="true"></i> <b>Tx. Median: </b> <span id="block.currentTxsMedian"></span>
+		</article>
+
+		<article class="tile is-child notification is-size-6">
+				<i class="fas fa-lock" aria-hidden="true"></i> <b>Effective Tx Median </b> <span id="block.effectiveTxsMedian"></span>
+		</article>	
+	</div>
+    <div class="tile is-parent is-vertical is-3">
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Reward Penalty: <span id="block.rewardPenalty"></span>
+		</article>   
+
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-cube" aria-hidden="true"></i> <b>Base Reward: </b> <span id="block.baseReward"></span>
+		</article>
+
+		<article class="tile is-child notification is-size-6">
+			<i class="fas fa-users" aria-hidden="true"></i> <b>Tx. Fee: </b> <span id="block.transactionsFee"></span>
+		</article>
+
+		<article class="tile is-child notification is-size-6">
+				<i class="fas fa-coins" aria-hidden="true"></i> <b>Reward </b> <span id="block.reward"></span>
+		</article>	
+	</div>
+
 </div>
 
 <div class="tile is-ancestor">
 	<div class="tile is-parent is-12">
 		<div class="tile">
 			<article class="tile is-child notification">
-				<p class="title size-is-4">Тransactions></p>
+				<p class="title size-is-4">Тransactions</p>
 				<div class="table">
 					<table class="table table-hover is-5">
 						<thead>
 						<tr>
-							<th><i class="fa fa-paw"></i> Hash</th>
-							<th><i class="fa fa-percent"></i> Fee</th>
-							<th><i class="fa fa-money"></i> Total Amount</th>
-							<th><i class="fa fa-arrows"></i> Size</th>
+							<th>Hash</th>
+							<th>Fee</th>
+							<th>Total Amount</th>
+							<th>Size</th>
 						</tr>
 						</thead>
 						<tbody id="transactions_rows"></tbody>
