--- a/pages/blockchain_payment_id.html
+++ b/pages/blockchain_payment_id.html
@@ -5,15 +5,13 @@
     <table class="table table-hover">
         <thead>
         <tr>
-            <th><i class="fa fa-paw"></i> Hash</th>
-            <th><i class="fa fa-percent"></i> Fee</th>
-            <th><i class="fa fa-money"></i> Total Amount</th>
-            <th><i class="fa fa-arrows"></i> Size</th>
+            <th>Hash</th>
+            <th>Fee</th>
+            <th>Total Amount</th>
+            <th>Size</th>
         </tr>
         </thead>
-        <tbody id="transactions_rows">
-
-        </tbody>
+        <tbody id="transactions_rows"></tbody>
     </table>
 </div>
 
