--- a/pages/blockchain_block.html
+++ b/pages/blockchain_block.html
@@ -8,47 +8,47 @@
 </div>
 <div class="tile is-ancestor">
     <div class="tile is-parent is-vertical is-3">
-		<article class="tile is-child notification is-size-6">
+		<article class="tile is-child notification is-size-3">
 			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Height: </b> <span id="block_height"><span id="block.height"></span></span>
 		</article>   
 
-		<article class="tile is-child notification is-size-6">
+		<article class="tile is-child notification is-size-3">
 			<i class="fas fa-clock" aria-hidden="true"></i> <b>Timestamp: </b> <span id="block.timestamp"></span></span>
 		</article>
 
-		<article class="tile is-child notification is-size-6">
+		<article class="tile is-child notification is-size-3">
 			<i class="fas fa-users" aria-hidden="true"></i> <b>Version: </b> <span id="block.version"></span>
 		</article>
 
-		<article class="tile is-child notification is-size-6">
+		<article class="tile is-child notification is-size-3">
 				<i class="fas fa-lock" aria-hidden="true"></i> <b>Difficulty: </b> <span id="block.difficulty"></span>
 		</article>	
 	</div>
 
     <div class="tile is-parent is-vertical is-3">
-		<article class="tile is-child notification is-size-6">
-			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Orphan: </b> <span id="block.orphan"></span></span>
+		<article class="tile is-child notification is-size-3">
+			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Orphan: </b> <span id="block.orphan"></span>
 		</article>   
 
-		<article class="tile is-child notification is-size-6">
+		<article class="tile is-child notification is-size-3">
 			<i class="fas fa-clock" aria-hidden="true"></i> <b>Transaction: </b> <span id="block.transactions"></span>
 		</article>
 
-		<article class="tile is-child notification is-size-6">
+		<article class="tile is-child notification is-size-3">
 			<i class="fas fa-users" aria-hidden="true"></i> <b>Total Supply: </b> <span id="block.totalCoins"></span>
 		</article>
 
-		<article class="tile is-child notification is-size-6">
+		<article class="tile is-child notification is-size-3">
 				<i class="fas fa-lock" aria-hidden="true"></i> <b>Total Transactions: </b> <span id="block.totalTransactions"></span>
 		</article>	
 	</div>
 
     <div class="tile is-parent is-vertical is-3">
-		<article class="tile is-child notification is-size-6">
+		<article class="tile is-child notification is-size-3">
 			<i class="fas fa-bolt" aria-hidden="true"></i> <b>Tx. Size: <span id="block.transactionsSize"></span>
 		</article>   
 
-		<article class="tile is-child notification is-size-6">
+		<article class="tile is-child notification is-size-3">
 			<i class="fas fa-cube" aria-hidden="true"></i> <b>Block Size: </b> <span id="block.blockSize"></span>
 		</article>
 
