--- a/pages/home.html
+++ b/pages/home.html
@@ -58,7 +58,7 @@
             <article class="tile is-child notification">
                 <p class="title is-4 badge is-badge-dark is-large" id="mempool_count" data-badge="0">Memory Pool</p>
                 <div class="table">
-                    <table class="table is-hoverable is-fullwidth is-5" id="mem_pool_table">
+                    <table class="table is-hoverable is-fullwidth size-is-6" id="mem_pool_table">
                         <thead>
                             <tr>
                                 <th width="10%">Amount</th>
@@ -84,7 +84,7 @@
                             <p class="title is-4">Latest Blocks</p>
                     </div>
                     <div class="level-right">
-                            <p class="is-5">Viewing Range: <span id="block-range">______ - ______</span></p>
+                            <p class="size-is-6">Viewing Range: <span id="block-range">______ - ______</span></p>
                     </div>
                 </div>
               
