--- a/pages/blockchain_block.html
+++ b/pages/blockchain_block.html
@@ -85,7 +85,7 @@
 		<article class="tile is-child notification">
 			<p class="title size-is-4">Тransactions</p>
 			<div class="table">
-				<table class="table table-hover is-5">
+				<table class="table is-hoverable is-fullwidth size-is-6">
 					<thead>
 					<tr>
 						<th>Hash</th>
